; ModuleID = '/home/carl/AnghaBench/linux/arch/mips/cavium-octeon/extr_flash_setup.c_octeon_flash_map_copy_to.c'
source_filename = "/home/carl/AnghaBench/linux/arch/mips/cavium-octeon/extr_flash_setup.c_octeon_flash_map_copy_to.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.map_info = type { i32 }

@octeon_bootbus_sem = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.map_info*, i64, i8*, i32)* @octeon_flash_map_copy_to to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @octeon_flash_map_copy_to(%struct.map_info* %0, i64 %1, i8* %2, i32 %3) #0 {
  %5 = alloca %struct.map_info*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  store %struct.map_info* %0, %struct.map_info** %5, align 8
  store i64 %1, i64* %6, align 8
  store i8* %2, i8** %7, align 8
  store i32 %3, i32* %8, align 4
  %9 = call i32 @down(i32* @octeon_bootbus_sem)
  %10 = load %struct.map_info*, %struct.map_info** %5, align 8
  %11 = load i64, i64* %6, align 8
  %12 = load i8*, i8** %7, align 8
  %13 = load i32, i32* %8, align 4
  %14 = call i32 @inline_map_copy_to(%struct.map_info* %10, i64 %11, i8* %12, i32 %13)
  %15 = call i32 @up(i32* @octeon_bootbus_sem)
  ret void
}

declare dso_local i32 @down(i32*) #1

declare dso_local i32 @inline_map_copy_to(%struct.map_info*, i64, i8*, i32) #1

declare dso_local i32 @up(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
